@@ -11,6 +11,7 @@ use start guess = True
 use boundaries = True
 sleep time = 0.2
 create trial = best_1_bin
+errorbar level = 1.05
 
 [data commands]
 names = A Example; Default; Simulation
